example/errors/go.mod
module github.com/foomo/gotsrpc/v2/example/errors

go 1.21

require (
	github.com/foomo/gotsrpc/v2 v2.0.0
	github.com/pkg/errors v0.9.1
)

require (
	github.com/iancoleman/strcase v0.3.0 // indirect
	github.com/mitchellh/mapstructure v1.5.0 // indirect
	github.com/ugorji/go/codec v1.2.12 // indirect
	golang.org/x/mod v0.16.0 // indirect
	golang.org/x/tools v0.19.0 // indirect
	gopkg.in/check.v1 v1.0.0-20201130134442-10cb98267c6c // indirect
	gopkg.in/yaml.v2 v2.4.0 // indirect
)

replace github.com/foomo/gotsrpc/v2 => ../../
